<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CalcFragment">

    <TextView
        android:id="@+id/hideActivityInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_1"
        android:layout_width="@dimen/calc_box_width"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_calc_1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_2"
        android:layout_width="@dimen/calc_box_width"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_1"
        android:paddingTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_calc2"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_3"
        android:layout_width="@dimen/calc_box_width"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_2"
        android:paddingTop="10dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_calc3"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_4"
        android:layout_width="@dimen/calc_box_width"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_3"
        android:paddingTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_calc4"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="48sp"
        app:layout_constraintTop_toBottomOf="@id/til_4"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_5"
        android:layout_width="@dimen/calc_box_width"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_equals">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_calc_master"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tv_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="48sp"
        app:layout_constraintTop_toBottomOf="@id/til_5"/>
    <Button
        android:id="@+id/btn_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_equals"
        app:layout_constraintTop_toTopOf="@id/btn_equals"/>
    <Button
        android:id="@+id/btn_blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/btn_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_equals"/>
</androidx.constraintlayout.widget.ConstraintLayout>